--- a/term project/M133040059 voronoi-report.html
+++ b/term project/M133040059 voronoi-report.html
@@ -1,3 +1,7 @@
+<!--
+M133040059
+李旭智
+--> 
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -64,7 +68,7 @@
         <button onclick="showPage('design')">程式設計</button>
         <button onclick="showPage('testing')">軟體測試</button>
         <button onclick="showPage('conclusion')">結論與心得</button>
-        <button onclick="showPage('appendix')">附錄</button>
+        
     </div>
 
     <div id="info" class="content page active">
@@ -74,6 +78,8 @@
         <p>系級：資工碩一</p>
         <p>姓名：李旭智</p>
         <p>學號：M133040059</p>
+        <h2>附錄：</h2>
+        <a href="https://github.com/lxz891014/Vorornoi-diagram-implement.git" target="_blank">檔案œ下載</a>
     </div>
 
     <div id="specification" class="content page">
@@ -252,14 +258,7 @@
             ，會推薦學弟妹來修這門課。</p>
     </div>
 
-    <div id="appendix" class="content page">
-        <h2>附錄</h2>
-        <ul>
-            <li>程式原始碼合併檔</li>
-            <li>測試輸入檔</li>
-            <li>測試輸出檔</li>
-        </ul>
-    </div>
+    
 
     <script>
         function showPage(pageId) {
